# agentco

./: .env.example  .gitignore  README.md  pyproject.toml
results/: data_quality_report_2025-09-08_20_00_UTC.md  data_quality_report_2025-09-09_20_00_UTC.md  data_quality_report_2025-09-10_20_00_UTC.md  data_quality_report_2025-09-11_20_00_UTC.md  data_quality_report_2025-09-12_20_00_UTC.md
src/agentco/: __init__.py  cli.py  logger.py  tools.py
src/agentco/agents/: __init__.py  commons.py  factory.py  multi_source_factory.py
src/agentco/agents/detectors/: __init__.py  duplicated_failed_detector_agent.py  empty_file_detector_agent.py  late_upload_detector_agent.py  missing_detector_agent.py  previous_period_detector_agent.py  source_synthesizer_agent.py  volume_variation_detector_agent.py
src/agentco/data/: data_converter.py
src/agentco/models/: __init__.py  data_source.py  file_entry.py
